testing commit as frontend

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": {
-    "name": "Vivek Kumar",
-    "email": "vivek.indie.dev@gmail.com",
-    "url": "https://vickvey.vercel.app"
+    "name": "Vivek Kumar"
   },
   "scripts": {
     "dev": "next dev --turbopack",
